{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 23,
  "lineage": "1c752223-ae1b-da28-1d10-1f1dc3d5c418",
  "resources": [
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005af4c3162f495fa",
            "arn": "arn:aws:ec2:eu-west-1:391761776243:instance/i-0a590d5b11ef5f9ea",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a590d5b11ef5f9ea",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair-dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-084be05664df1cfec",
            "private_dns": "ip-10-0-101-180.eu-west-1.compute.internal",
            "private_ip": "10.0.101.180",
            "public_ip": "3.249.242.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-039eb904a7691cf3e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f03251120ed7671",
            "tags": {
              "Environmnent": "dev",
              "Name": "instance-dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00f007b3095cf20c9"
            ]
          },
          "dependencies": [
            "module.instances.aws_key_pair.mykeypair",
            "module.instances.aws_security_group.allow-ssh",
            "module.main-vpc.module.main-vpc.aws_subnet.public",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-06c6085d158320ccc",
            "owner_id": "391761776243",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09d29674181a6d5c2"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06c6085d158320ccc",
            "id": "r-rtb-0360bc9a560d77e6a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0360bc9a560d77e6a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_internet_gateway.this",
            "module.main-vpc.module.main-vpc.aws_route_table.public",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b0ee724fb0afe071",
            "owner_id": "391761776243",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09d29674181a6d5c2"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06d8e28e1f3446869",
            "owner_id": "391761776243",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09d29674181a6d5c2"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04fa0d99d9e94ac51",
            "owner_id": "391761776243",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-eu-west-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09d29674181a6d5c2"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0360bc9a560d77e6a",
            "owner_id": "391761776243",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09d29674181a6d5c2"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4840ef8644f68e7",
            "route_table_id": "rtb-0b0ee724fb0afe071",
            "subnet_id": "subnet-0cfe984b2753a204a"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.private",
            "module.main-vpc.module.main-vpc.aws_subnet.private",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089d33db92980329a",
            "route_table_id": "rtb-06d8e28e1f3446869",
            "subnet_id": "subnet-0e1056318fb27eb3d"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.private",
            "module.main-vpc.module.main-vpc.aws_subnet.private",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09309423c4dd88d33",
            "route_table_id": "rtb-04fa0d99d9e94ac51",
            "subnet_id": "subnet-004b955f2a9138438"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.private",
            "module.main-vpc.module.main-vpc.aws_subnet.private",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b230def8c8420ff7",
            "route_table_id": "rtb-0360bc9a560d77e6a",
            "subnet_id": "subnet-00f03251120ed7671"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.public",
            "module.main-vpc.module.main-vpc.aws_subnet.public",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c3054be588eb4bf",
            "route_table_id": "rtb-0360bc9a560d77e6a",
            "subnet_id": "subnet-0df851f5090ca9b27"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.public",
            "module.main-vpc.module.main-vpc.aws_subnet.public",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051bbd478acc63ec1",
            "route_table_id": "rtb-0360bc9a560d77e6a",
            "subnet_id": "subnet-08cc1b099894adf1c"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.public",
            "module.main-vpc.module.main-vpc.aws_subnet.public",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:security-group/sg-00f007b3095cf20c9",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f007b3095cf20c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-dev",
            "name_prefix": null,
            "owner_id": "391761776243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environmnent": "dev",
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d29674181a6d5c2"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:subnet/subnet-0cfe984b2753a204a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0cfe984b2753a204a",
            "map_public_ip_on_launch": false,
            "owner_id": "391761776243",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09d29674181a6d5c2"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:subnet/subnet-0e1056318fb27eb3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0e1056318fb27eb3d",
            "map_public_ip_on_launch": false,
            "owner_id": "391761776243",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09d29674181a6d5c2"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:subnet/subnet-004b955f2a9138438",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-004b955f2a9138438",
            "map_public_ip_on_launch": false,
            "owner_id": "391761776243",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-eu-west-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09d29674181a6d5c2"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:subnet/subnet-00f03251120ed7671",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-00f03251120ed7671",
            "map_public_ip_on_launch": true,
            "owner_id": "391761776243",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09d29674181a6d5c2"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:subnet/subnet-0df851f5090ca9b27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0df851f5090ca9b27",
            "map_public_ip_on_launch": true,
            "owner_id": "391761776243",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09d29674181a6d5c2"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:subnet/subnet-08cc1b099894adf1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-08cc1b099894adf1c",
            "map_public_ip_on_launch": true,
            "owner_id": "391761776243",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public-eu-west-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09d29674181a6d5c2"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:vpc/vpc-09d29674181a6d5c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bfe181ca5f90f6b2",
            "default_route_table_id": "rtb-0196cd2d9a2a6693d",
            "default_security_group_id": "sg-0e69dd03b16826782",
            "dhcp_options_id": "dopt-495b0f2f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09d29674181a6d5c2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0196cd2d9a2a6693d",
            "owner_id": "391761776243",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "apigw",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appmesh_envoy_management",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appstream",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "athena",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloud_directory",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudformation",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudtrail",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codebuild",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codepipeline",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "config",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_autoscaling",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "efs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticloadbalancing",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "git_codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "glue",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_firehose",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_streams",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "rekognition",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_notebook",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_runtime",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "servicecatalog",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "storagegateway",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transfer",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transferserver",
      "each": "list",
      "provider": "provider.aws"
    }
  ]
}